@@ -1,5 +1,8 @@
 /*
  * $Log: svok.c,v $
+ * Revision 1.6  2023-03-04 14:40:57+05:30  Cprogrammer
+ * check for supervise/ok in original service dir before run filesystem
+ *
  * Revision 1.5  2020-11-30 23:20:28+05:30  Cprogrammer
  * change warning text message for missing directory in /run
  *
@@ -30,26 +33,38 @@
 int
 main(int argc, char **argv)
 {
-	int             fd;
+	int             fd = -1;
 
 	if (!argv[1])
 		strerr_die1x(100, "svok: usage: svok dir");
 	if (chdir(argv[1]) == -1)
 		strerr_die4sys(111, FATAL, "unable to chdir to ", argv[1], ": ");
 #ifdef USE_RUNFS
-	switch (run_init(argv[1]))
-	{
-	case 0:
-		break;
-	case -1:
-		strerr_warn2(WARN, "unable to get current working directory: ", &strerr_sys);
-		_exit(111);
-	case -2:
-		strerr_warn4(WARN, "No run state information for ", argv[1], ": ", &strerr_sys);
-		_exit(111);
+	if ((fd = open_write("supervise/ok")) == -1) {
+		if (errno == error_nodevice)
+			_exit(100);
+		if (errno != error_noent)
+			strerr_die4sys(111, FATAL, "unable to open ", argv[1], "/supervise/ok: ");
+		/* check for service/supervise in /run/svscan */
+		switch (run_init(argv[1]))
+		{
+		case 0: /*- cwd changed to /run/svscan/service_name */
+			break;
+		case 1: /*- /run, /var/run doesn't exist */
+			_exit(100);
+		case -1:
+			strerr_warn2(WARN, "unable to get current working directory: ", &strerr_sys);
+			_exit(111);
+		case -2:
+			strerr_warn4(WARN, "No run state information for ", argv[1], ": ", &strerr_sys);
+			_exit(111);
+		case -3:
+			strerr_warn3(WARN, argv[1], ": name too long", 0);
+			_exit(111);
+		}
 	}
 #endif
-	if ((fd = open_write("supervise/ok")) == -1) {
+	if (fd == -1 && (fd = open_write("supervise/ok")) == -1) {
 		if (errno == error_noent)
 			_exit(100);
 		if (errno == error_nodevice)
@@ -62,7 +77,7 @@ main(int argc, char **argv)
 void
 getversion_svok_c()
 {
-	static char    *x = "$Id: svok.c,v 1.5 2020-11-30 23:20:28+05:30 Cprogrammer Exp mbhangui $";
+	static char    *x = "$Id: svok.c,v 1.6 2023-03-04 14:40:57+05:30 Cprogrammer Exp mbhangui $";
 
 	x++;
 }
